--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-places-autocomplete": "^7.2.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
